@@ -402,6 +402,30 @@ plotting.clusterProfile <- function(clProf.reshape.df,
     return(p)
 }
 
+get_go_ontology <- function(x) {
+    if (is(x, "compareClusterResult")) {
+        if (x@fun != "enrichGO") {
+            stop("simplify only work for GO...")
+        }
+        ont <- x@.call$ont
+        if (is.null(ont)) {
+            ## should be "MF", default value of enrichGO
+            ## it's safe to determine from the output
+            ont <- x@compareClusterResult$ID[1] %>% GOTERM[[.]] %>% Ontology
+        }
+    } else if (is(x, "enrichResult")) {
+        if (!x@ontology %in% c("BP", "MF", "CC"))
+            stop("ontology should be one of 'MF', 'BP', 'CC'...")
+
+        ont <- x@ontology
+    } else {
+        stop("x should be an instance of 'enrichResult' or 'compareClusterResult'...")
+    }
+
+    return(ont)
+}
+
+
 ##' building GO mapping files
 ##'
 ##' provided by a data.frame of GO (column 1) and gene (column 2) direct annotation
